--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,33 @@
 spring:
+  h2:
+    console:
+      enabled: true
   datasource:
-    hikari:
-      driver-class-name: com.taosdata.jdbc.TSDBDriver
-      jdbc-url: jdbc:TAOS://${DB_URL:127.0.0.1}:6030/${DB_NAME:sentinel_metric}
-      username: ${DB_USERNAME:root}
-      password: ${DB_PASSWORD:taosdata}
-      connection-timeout: 10000
-      idle-timeout: 600000
-      max-lifetime: 1800000
-      maximum-pool-size: ${DB_MAXIMUM_POOL_SIZE:20}
-
+    driver-class-name: org.h2.Driver
+    jdbc-url: jdbc:h2:mem:testdb
+    username: sa
+    password:
+    druid:
+      initial-size: 5
+      min-idle: 5
+      max-idle: 20
+      max-active: 20
+      max-wait: 60000
+      validation-query: 'select server_status();'
+      validation-query-timeout: 5000
+      test-on-borrow: false
+      test-on-return: false
+      test-while-idle: true
+      time-between-eviction-runs-millis: 60000
+      min-evictable-idle-time-millis: 600000
+      max-evictable-idle-time-millis: 900000
+  tdengine-Datasource:
+    driver-class-name: com.taosdata.jdbc.TSDBDriver
+    jdbc-url: jdbc:TAOS://${DB_URL:127.0.0.1}:6030/${DB_NAME:sentinel_metric}
+    username: ${DB_USERNAME:root}
+    password: ${DB_PASSWORD:taosdata}
+tdengine:
+  enabled: ${TDENGINE_ENABLED:false}
 auth:
   filter:
     exclude-urls: /,/auth/login,/auth/logout,/registry/machine,/version
@@ -36,7 +54,7 @@ logging:
           springbootdemo:
             dao: DEBUG
   pattern:
-    console: %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+    console: '%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n'
 sentinel:
   dashboard:
     version: @project.version@
