--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
       max-wait: 60000
       validation-query: 'select server_status();'
       validation-query-timeout: 5000
-      test-on-borrow: false
+      test-on-borrow: ${DB_TEST_ON_BORROW:false}
       test-on-return: false
       test-while-idle: true
       time-between-eviction-runs-millis: 60000
