--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    driver-class-name: org.h2.Driver
-    jdbc-url: jdbc:h2:mem:sentinel_metric
-    username: sa
-    password:
+    driver-class-name: com.taosdata.jdbc.TSDBDriver
+    url: jdbc:TAOS://${DB_URL:127.0.0.1}:6030/${DB_NAME:sentinel_metric}
+    username: ${DB_USERNAME:root}
+    password: ${DB_PASSWORD:taosdata}
     druid:
       initial-size: 5
       min-idle: 5
@@ -18,13 +18,6 @@ spring:
       time-between-eviction-runs-millis: 60000
       min-evictable-idle-time-millis: 600000
       max-evictable-idle-time-millis: 900000
-  tdengine-Datasource:
-    driver-class-name: com.taosdata.jdbc.TSDBDriver
-    jdbc-url: jdbc:TAOS://${DB_URL:127.0.0.1}:6030/${DB_NAME:sentinel_metric}
-    username: ${DB_USERNAME:root}
-    password: ${DB_PASSWORD:taosdata}
-tdengine:
-  enabled: ${TDENGINE_ENABLED:false}
 auth:
   filter:
     exclude-urls: /,/auth/login,/auth/logout,/registry/machine,/version
